# jetsimpy-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
data/: grb250129a.csv
docs/: benchmarks.md  index.md  requirements.txt
docs/api/: ebl.md  index.md  numeric.md
docs/examples/: at2018cow.md  at2022cmc.md  grb140304a.md  grb200826a.md  grb250129a.md  grb_afterglow.md  gw170817.md  numeric_comparison.md  reverse_shock.md
docs/getting-started/: installation.md  quickstart.md
docs/physics/: forward-mapping.md  hydrodynamics.md  radiation.md
docs/validation/: dynamics.md  index.md  jets.md  radiation.md  thermal.md
examples/: at2018cow_radio.py  at2022cmc_radio.py  grb140304a_energy_injection.py  grb250129a.py  numeric_comparison.py  showcase_thermal.py
jetsimpy_rs/: _jet_type.py  _jetsimpy.py  _shortcut.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
src/: constants.rs  lib.rs
src/afterglow/: afterglow.rs  blast.rs  chang_cooper.rs  eats.rs  ebl.rs  forward_grid.rs  inverse_compton.rs  mod.rs  models.rs  pairs.rs  ssa.rs  thermal.rs
src/hydro/: config.rs  interpolate.rs  mod.rs  reverse_shock.rs  sim_box.rs  tools.rs
src/math/: integral.rs  mod.rs  optimize.rs  root.rs  special.rs
tests/: integration.rs  test_chang_cooper.py  test_comparison.py  test_rust_unit.py
