[build-system]
requires = ["setuptools>=64", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "jetsimpy-rs"
version = "0.1.0"
description = "GRB afterglow simulator (Rust + PyO3)"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
cpu = ["jetsimpy-cpu"]

[tool.setuptools.packages.find]
include = ["jetsimpy_rs*"]
